--- a/css/template-parts/_hero.scss
+++ b/css/template-parts/_hero.scss
@@ -97,7 +97,7 @@
             height: rem-calc(600);
 
             @media screen and (max-width: 930px) {
-                height: rem-calc(300);
+                height: 100%;
             }
 
             img {
